--- a/app/index.html
+++ b/app/index.html
@@ -6,7 +6,8 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-        <title>Example Kanban [POC 0.0.2]</title>
+
+        <title>My Kanban</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width">
         <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
@@ -16,8 +17,22 @@
         <!-- build:js scripts/vendor/modernizr.js -->
         <script src="bower_components/modernizr/modernizr.js"></script>
         <!-- endbuild -->
+
     </head>
     <body>
+        <header id="auth-tools" style="display:none;">
+            <button type="button" id="close" class="close">&times;</button>
+            <a class="brand" href="#">My Kanban</a>
+            <div id="nav">
+                <a id="login"><i class="icon-github-alt"></i> Login with Github</a>
+                <span id="logout-wrap" style="display:none;">
+                    <span id="uname"></span> 
+                    <a id="logout">logout</a>
+                </span>
+            </div>
+            <div id="puller"></div>
+        </header>
+
         <div class="main">
             <div class="kanban-board">
               <div class="column w2">
@@ -42,6 +57,10 @@
             </div>
         </div>
 
+        <div id="welcome" class="alert alert-info" style="display:none;">
+            <p>Hello bla blabla<p>
+        </div>
+
         <!--[if lt IE 7]>
             <p class="chromeframe">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> or <a href="http://www.google.com/chromeframe/?redirect=true">activate Google Chrome Frame</a> to improve your experience.</p>
         <![endif]-->
@@ -57,5 +76,6 @@
         <!-- build:js scripts/main.js -->
         <script data-main="scripts/main" src="bower_components/requirejs/require.js"></script>
         <!-- endbuild -->
+
 </body>
 </html>
