Card view improvements & ajax error handling

--- a/app/index.html
+++ b/app/index.html
@@ -33,6 +33,11 @@
             <div id="puller"></div>
         </header>
 
+        <!-- Welcome message for first time users when oauth is enabled -->
+        <div id="welcome" class="alert alert-info" style="display:none;">
+            <p>Hello bla blabla<p>
+        </div>
+
         <div class="main">
             <div class="kanban-board">
               <div class="column w2">
@@ -55,10 +60,6 @@
                 <div id="done" class="drag-zone"></div>
               </div>
             </div>
-        </div>
-
-        <div id="welcome" class="alert alert-info" style="display:none;">
-            <p>Hello bla blabla<p>
         </div>
 
         <!--[if lt IE 7]>
