--- a/app/index.html
+++ b/app/index.html
@@ -52,21 +52,13 @@
             <div class="kanban-board">
               <div class="column w2">
                 <div>
-                    <h2 class="title">TODO 
-                        <div class="wip-wrap">
-                            <input type="text" class="wip" data-max="7" data-readOnly="true"
-                            data-width="42" data-height="42" data-thickness="0.5" data-skin="tron" />
-                        </div>
-                    </h2>
+                    <h2 class="title">TODO <span class="wip">7</span></h2>
                     <div id="todo" class="drag-zone"></div>
                 </div>
                 <div>
                     <h4 class="title">
                         <i class="icon-fire" style="color: #FF615E;"></i>
-                        URGENT 
-                        <div class="wip-wrap">
-                            <input type="text" class="wip" data-max="5" data-skin="tron" data-readOnly="true" data-width="23" data-height="23" data-thickness="0.5" />
-                        </div>
+                        URGENT <span class="wip">3</span>
                     </h4>
                     <div id="urgent" class="drag-zone"></div>
                 </div>
